--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   	<button>Chép</button></h3>
   </form>
   <br><textarea id="textae" rows="20" cols="50" readonly></textarea><br><br>
-  <a href="https://hihello.me/p/3881efc8-3c01-43a2-9ab3-1637b8925bd5 " target="_blank">About me</a>
+  <a href="youtube.com" target="_blank">About me</a>
 </body></center>
 <script src="script.js"></script>
 </html>
